--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>TO-DO List</title>
+    <title>TODO List</title>
     <link rel="stylesheet" href="home.css" />
   </head>
 
@@ -38,7 +38,7 @@
     <div class="counter-container">
       <div id="task-counters">
         Completed: <span id="completed-counter">0</span> | Uncompleted:
-        <span id="uncompleted-counter">0</span>
+        <span id="uncompleted-counter"> 0 </span>
       </div>
     </div>
 
