--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
           class="input-item"
           name="input_box"
           id="input-box"
-          placeholder="Add Task"
+          placeholder="Add New Task"
         />
 
         <!-- add button -->
